...
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/quicksand"
        android:gravity="center"
        android:text="What do you want to delete?"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

...
        android:layout_marginStart="56dp"
        android:layout_marginTop="72dp"
        android:text="QR"
        android:textSize="15sp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/quicksand"
        app:layout_constraintEnd_toStartOf="@+id/button_event"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_event"
...
