<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Facility"
        android:fontFamily="@font/quicksand"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edit_facility_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter new facility name"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/save_facility_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:layout_gravity="center"
        android:fontFamily="@font/quicksand"
        android:backgroundTint="@color/purple"
        android:layout_marginTop="5dp"/>
</LinearLayout>
