...
        android:fontFamily="@font/quicksand"
        android:backgroundTint="@color/purple"
        android:text="Scan QR Code"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/view_all_events_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scan_qr_code_button"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/quicksand"
...
